Removed home button
This app hides the ActionBar anyway, but since the app doesn't use navigation, removed the home button from the ActionBar.

--- a/src/OutTime.mxml
+++ b/src/OutTime.mxml
@@ -46,6 +46,6 @@
 	</fx:Script>
 
 	<s:navigationContent>
-		<s:Button icon="@Embed('assets/launchpad_home.png')" click="navigator.popToFirstView()"/>
+		<!--s:Button icon="@Embed('assets/launchpad_home.png')" click="navigator.popToFirstView()"/-->
 	</s:navigationContent>
 </s:ViewNavigatorApplication>
