--- a/src/views/OutTimeHome.mxml
+++ b/src/views/OutTimeHome.mxml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009" 
 	xmlns:s="library://ns.adobe.com/flex/spark" 
-	title="OutTime" 
+	title="out time" 
 	viewActivate="onViewActivate(event)" 
 	xmlns:mx="library://ns.adobe.com/flex/mx"
+	actionBarVisible="false"
 	>
 	
 	<fx:Declarations>
