--- a/src/views/OutTimeHome.mxml
+++ b/src/views/OutTimeHome.mxml
@@ -108,7 +108,7 @@
 					sqlConnection.addEventListener(SQLErrorEvent.ERROR, onSQLError);				
 					sqlConnection.open(File.applicationStorageDirectory.resolvePath(DATABASE_FILE));
 					
-					pieData = new ArrayCollection([minutesSet, 0]);
+					pieData = new ArrayCollection([0, minutesSet]);
 				} else { // timer is running
 					// @TODO react appropriately if timer should have ended while backgrounded
 					// or continue counting down if still time on clock (use system clock to know)
@@ -220,7 +220,6 @@
 				clockSecondsTensPlace.text = String(Math.floor(s/10));
 				clockSecondsOnesPlace.text = String(s%10);
 				
-				
 				pieData[0] = minutesSet*60 - secondsRemaining;
 				pieData[1] = secondsRemaining;
 			}
@@ -244,7 +243,7 @@
 		<s:State name="run" />
 		<s:State name="end" />
 	</s:states>
-
+	
 	<s:Group includeIn="set">
 		<s:TextArea text="How many" textAlign="center" styleName="paragraph" width="600" editable="false" selectable="false" horizontalCenter="0" verticalCenter="-300" />
 		<s:TextArea id="question" text="minutes" textAlign="center" styleName="display" width="600" editable="false" selectable="false" scaleX="2" scaleY="2" horizontalCenter="0" verticalCenter="-200" />
